--- a/home.html
+++ b/home.html
@@ -239,8 +239,38 @@
     })();
 
     // ---- Theme init & toggle ----
-    (function () {
-      const root = document.documentElement;
-      const btn = document.getElementById("themeToggle");
-      const iconSun = document.getElementById("iconSun");
-      const
+    <script>
+(function () {
+  const root = document.documentElement;
+  const btn = document.getElementById("themeToggle");
+  const iconSun = document.getElementById("iconSun");
+  const iconMoon = document.getElementById("iconMoon");
+  const toggleLabel = document.getElementById("toggleLabel");
+
+  // Helper to set theme
+  function setTheme(theme) {
+    root.setAttribute('data-theme', theme);
+    if (theme === 'dark') {
+      iconSun.style.display = "none";
+      iconMoon.style.display = "inline";
+      toggleLabel.textContent = "Light";
+      btn.setAttribute('aria-pressed', 'true');
+    } else {
+      iconSun.style.display = "inline";
+      iconMoon.style.display = "none";
+      toggleLabel.textContent = "Dark";
+      btn.setAttribute('aria-pressed', 'false');
+    }
+    localStorage.setItem('theme', theme);
+  }
+
+  // Load theme from localStorage
+  const savedTheme = localStorage.getItem('theme');
+  setTheme(savedTheme || 'light');
+
+  btn.addEventListener('click', function () {
+    const current = root.getAttribute('data-theme');
+    setTheme(current === 'dark' ? 'light' : 'dark');
+  });
+})();
+</script>
