--- a/home.html
+++ b/home.html
@@ -239,38 +239,37 @@
     })();
 
     // ---- Theme init & toggle ----
-    <script>
-(function () {
-  const root = document.documentElement;
-  const btn = document.getElementById("themeToggle");
-  const iconSun = document.getElementById("iconSun");
-  const iconMoon = document.getElementById("iconMoon");
-  const toggleLabel = document.getElementById("toggleLabel");
+    (function () {
+      const root = document.documentElement;
+      const btn = document.getElementById("themeToggle");
+      const iconSun = document.getElementById("iconSun");
+      const iconMoon = document.getElementById("iconMoon");
+      const label = document.getElementById("toggleLabel");
 
-  // Helper to set theme
-  function setTheme(theme) {
-    root.setAttribute('data-theme', theme);
-    if (theme === 'dark') {
-      iconSun.style.display = "none";
-      iconMoon.style.display = "inline";
-      toggleLabel.textContent = "Light";
-      btn.setAttribute('aria-pressed', 'true');
-    } else {
-      iconSun.style.display = "inline";
-      iconMoon.style.display = "none";
-      toggleLabel.textContent = "Dark";
-      btn.setAttribute('aria-pressed', 'false');
-    }
-    localStorage.setItem('theme', theme);
-  }
+      // Determine initial theme: saved > system > light
+      const saved = localStorage.getItem("theme");
+      const prefersDark = window.matchMedia && window.matchMedia("(prefers-color-scheme: dark)").matches;
+      const initial = saved || (prefersDark ? "dark" : "light");
+      setTheme(initial);
 
-  // Load theme from localStorage
-  const savedTheme = localStorage.getItem('theme');
-  setTheme(savedTheme || 'light');
+      btn.addEventListener("click", () => {
+        const next = root.getAttribute("data-theme") === "dark" ? "light" : "dark";
+        setTheme(next);
+        localStorage.setItem("theme", next);
+      });
 
-  btn.addEventListener('click', function () {
-    const current = root.getAttribute('data-theme');
-    setTheme(current === 'dark' ? 'light' : 'dark');
-  });
-})();
-</script>
+      function setTheme(mode) {
+        root.setAttribute("data-theme", mode);
+        const dark = mode === "dark";
+        btn.setAttribute("aria-pressed", String(dark));
+        iconSun.style.display = dark ? "none" : "inline";
+        iconMoon.style.display = dark ? "inline" : "none";
+        label.textContent = dark ? "Light" : "Dark";
+        // Update theme-color meta for nicer mobile UI tint
+        const meta = document.querySelector('meta[name="theme-color"]');
+        if (meta) meta.setAttribute("content", dark ? "#0b1220" : "#4CAF50");
+      }
+    })();
+  </script>
+</body>
+</html>
