--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
       --card: #ffffff;
       --text: #1f2937;
       --muted: #4b5563;
-      --brand: #4CAF50;
+      --brand: linear-gradient(to top right, #9CFFD4, #9CFFA3);
       --nav: #333333;
       --nav-hover: #575757;
       --shadow: 0 2px 5px rgba(0,0,0,0.1);
@@ -37,7 +37,7 @@
       --card: #121826;               /* slightly lifted */
       --text: #e5e7eb;
       --muted: #94a3b8;
-      --brand: #22c55e;              /* greener pop */
+      --brand: linear-gradient(to top right, #9CFFD4, #9CFFA3);              /* greener pop */
       --nav: #0b1220;
       --nav-hover: #1f2937;
       --shadow: 0 2px 6px rgba(0,0,0,0.45);
