--- a/home.html
+++ b/home.html
@@ -176,6 +176,8 @@
     <a href="#home">Home</a>
     <a href="#about">About</a>
     <a href="#projects">Projects</a>
+    <a href="#edjucation">Edjucation</a>
+    <a href="skills">Skills</a>
     <a href="#contact">Contact</a>
     <span class="nav-spacer"></span>
     <div class="toggle-wrap">
