--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
 
     header {
       background: var(--brand);
-      color: white;
+      color: #3B393A;
       padding: 28px 12px;
       text-align: center;
     }
