--- a/home.html
+++ b/home.html
@@ -179,6 +179,8 @@
     <a href="#education">Education</a>
     <a href="skills">Skills</a>
     <a href="#contact">Contact</a>
+    <a href="Madison.html">Madison</a>
+    <a href="Bryce.html">Bryce</a>
     <span class="nav-spacer"></span>
     <div class="toggle-wrap">
       <!-- Accessible toggle with inline SVG icons -->
