--- a/home.html
+++ b/home.html
@@ -81,7 +81,7 @@
       padding-inline: 8px;
     }
     nav a {
-      color: #3B393A;
+      color: white;
       padding: 12px 16px;
       text-decoration: none;
       text-transform: uppercase;
