--- a/home.html
+++ b/home.html
@@ -2,167 +2,116 @@
 <html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>My GitHub Page</title>
-
-  <!-- Let browsers know we support light & dark -->
   <meta name="color-scheme" content="light dark">
   <meta name="theme-color" content="#4CAF50" />
 
   <style>
-    /* ---------- THEME TOKENS ---------- */
-    :root {
-      --bg1: #f4f4f9;
-      --bg-grad-a: #eef3ff;
-      --bg-grad-b: #f9faff;
-      --bg-grad-c: #eef9f4;
-      --card: #ffffff;
-      --text: #1f2937;
-      --muted: #4b5563;
-      --brand: linear-gradient(to top right, #9CFFD4, #9CFFA3);
-      --nav: #333333;
-      --nav-hover: #575757;
-      --shadow: 0 2px 5px rgba(0,0,0,0.1);
-      --shadow-lg: 0 8px 20px rgba(0,0,0,0.18);
-      --radius: 12px;
-      --ease: cubic-bezier(.2,.8,.2,1);
+    :root{
+      --bg1:#0f172a0d; --bg-grad-a:#eef3ff; --bg-grad-b:#f9faff; --bg-grad-c:#eef9f4;
+      --card:#ffffff; --text:#1f2937; --muted:#4b5563;
+      /* your mint gradient */
+      --brand: linear-gradient(to top right,#9CFFD4,#9CFFA3);
+      --nav:#111827; --nav-hover:#1f2937;
+      --shadow:0 2px 5px rgba(0,0,0,.1); --shadow-lg:0 8px 20px rgba(0,0,0,.18);
+      --radius:12px; --ease:cubic-bezier(.2,.8,.2,1);
+    }
+    html[data-theme="dark"]{
+      --card:#121826; --text:#e5e7eb; --muted:#94a3b8;
+      --nav:#0b1220; --nav-hover:#1f2937; --shadow:0 2px 6px rgba(0,0,0,.45); --shadow-lg:0 10px 28px rgba(0,0,0,.55);
+      /* keep same brand gradient in dark mode */
+      --brand: linear-gradient(to top right,#9CFFD4,#9CFFA3);
     }
 
-    /* Dark theme overrides */
-    html[data-theme="dark"] {
-      --bg1: #0f172a;                /* slate-900-ish */
-      --bg-grad-a: #0b1225;
-      --bg-grad-b: #0f1a33;
-      --bg-grad-c: #0e1b2a;
-      --card: #121826;               /* slightly lifted */
-      --text: #e5e7eb;
-      --muted: #94a3b8;
-      --brand: linear-gradient(to top right, #9CFFD4, #9CFFA3);              /* greener pop */
-      --nav: #0b1220;
-      --nav-hover: #1f2937;
-      --shadow: 0 2px 6px rgba(0,0,0,0.45);
-      --shadow-lg: 0 10px 28px rgba(0,0,0,0.55);
+    *{box-sizing:border-box}
+    body{
+      margin:0; font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      color:var(--text); line-height:1.6;
+      background:linear-gradient(-45deg,var(--bg1),var(--bg-grad-a),var(--bg-grad-b),var(--bg-grad-c));
+      background-size:400% 400%; animation:bgShift 18s ease infinite;
+    }
+    @keyframes bgShift{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
+
+    header{
+      background:var(--brand); color:#0d0e10; text-align:center;
+      padding: clamp(16px,4vw,28px) 12px;
+    }
+    header h1{
+      margin:.2rem 0 .4rem;
+      font-weight:800;
+      font-size: clamp(1.4rem, 4.8vw, 2.4rem);
+      white-space:nowrap; overflow:hidden; width:0;
+      border-right:2px solid rgba(0,0,0,.35);
+      animation:typing 2.2s steps(28,end) forwards, caret .8s step-end infinite;
+    }
+    header p{margin:0; opacity:.85; font-size:.95rem}
+    @keyframes typing{from{width:0}to{width:22ch}}
+    @keyframes caret{50%{border-color:transparent}}
+    /* On phones, don’t clip: just show the full title without typing */
+    @media (max-width: 480px){
+      header h1{animation:none; border-right:0; width:auto; white-space:normal}
     }
 
-    /* ---------- BASE & LAYOUT ---------- */
-    * { box-sizing: border-box; }
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      color: var(--text);
-      line-height: 1.6;
-      background: linear-gradient(-45deg, var(--bg1), var(--bg-grad-a), var(--bg-grad-b), var(--bg-grad-c));
-      background-size: 400% 400%;
-      animation: bgShift 18s ease infinite;
-      transition: background-color .25s var(--ease), color .25s var(--ease);
+    /* NAV */
+    nav{
+      position:sticky; top:0; z-index:20;
+      background:var(--nav); color:#fff;
+      display:flex; align-items:center; gap:8px; padding:8px 10px;
     }
-    @keyframes bgShift {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+    .brand-spacer{flex:1}
+    .theme-toggle, .menu-toggle{
+      border:0; background:transparent; color:#fff; border-radius:10px;
+      padding:10px 12px; cursor:pointer;
+    }
+    .theme-toggle:hover,.menu-toggle:hover{background:var(--nav-hover)}
+    .theme-toggle:focus-visible,.menu-toggle:focus-visible{outline:2px solid #fff; outline-offset:2px}
+
+    .nav-links{
+      display:flex; gap:6px; list-style:none; margin:0; padding:0;
+    }
+    .nav-links a{
+      display:inline-block; color:#fff; text-decoration:none; text-transform:uppercase;
+      font-size:.92rem; padding:10px 14px; border-radius:8px;
+      transition:background-color .2s var(--ease), transform .2s var(--ease);
+    }
+    .nav-links a:hover{background:var(--nav-hover); transform:translateY(-1px)}
+
+    /* Mobile menu (hidden by default) */
+    @media (max-width: 768px){
+      .nav-links{
+        position:fixed; left:0; right:0; top:56px;
+        background:var(--nav);
+        flex-direction:column; gap:0; padding:6px 10px 12px;
+        max-height:0; overflow:hidden; transition:max-height .25s var(--ease);
+        box-shadow:0 10px 24px rgba(0,0,0,.25);
+      }
+      .nav-links.open{max-height:60vh; overflow:auto}
+      .menu-toggle{display:inline-flex}
     }
 
-    header {
-      background: var(--brand);
-      color: #3B393A;
-      padding: 28px 12px;
-      text-align: center;
+    /* Desktop: hide burger, show inline links */
+    @media (min-width: 769px){
+      .menu-toggle{display:none}
     }
 
-    nav {
-      background: var(--nav);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 6px;
-      position: sticky;
-      top: 0;
-      z-index: 10;
-      padding-inline: 8px;
+    .content{max-width:900px; margin:24px auto; padding:0 12px}
+    section{
+      background:var(--card); margin:16px 0; padding:clamp(14px,2.8vw,22px);
+      border-radius:var(--radius); box-shadow:var(--shadow);
+      transition:transform .25s var(--ease), box-shadow .25s var(--ease), opacity .6s var(--ease);
+      opacity:0; transform:translateY(14px);
     }
-    nav a {
-      color: white;
-      padding: 12px 16px;
-      text-decoration: none;
-      text-transform: uppercase;
-      font-size: 0.92rem;
-      letter-spacing: .02em;
-      transition: transform .2s var(--ease), background-color .2s var(--ease), opacity .2s var(--ease);
-      opacity: .95;
-      border-radius: 8px;
-    }
-    nav a:hover { background: var(--nav-hover); transform: translateY(-1px); opacity: 1; }
+    section.visible{opacity:1; transform:translateY(0)}
+    section:hover{box-shadow:var(--shadow-lg)}
 
-    /* Toggle sits at the right side */
-    .nav-spacer { flex: 1; }
-    .toggle-wrap {
-      margin-left: auto;
-      display: flex;
-      align-items: center;
+    footer{
+      background:var(--nav); color:#fff; text-align:center; padding:12px;
     }
-    .theme-toggle {
-      display: inline-flex;
-      align-items: center;
-      gap: 8px;
-      border: 0;
-      background: transparent;
-      color: white;
-      padding: 10px 12px;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: background-color .2s var(--ease), transform .2s var(--ease);
-    }
-    .theme-toggle:hover { background: var(--nav-hover); transform: translateY(-1px); }
-    .theme-toggle:focus-visible { outline: 2px solid white; outline-offset: 2px; border-radius: 12px; }
-
-    .content {
-      max-width: 900px;
-      margin: 24px auto 96px;
-      padding: 0 12px;
-    }
-
-    section {
-      background: var(--card);
-      margin: 20px 0;
-      padding: 22px;
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-      transition: transform .25s var(--ease), box-shadow .25s var(--ease),
-                  opacity .6s var(--ease), filter .6s var(--ease), background-color .25s var(--ease);
-      opacity: 0;
-      transform: translateY(18px);
-      filter: blur(2px);
-    }
-    section:hover { transform: translateY(-4px); box-shadow: var(--shadow-lg); }
-    section.visible { opacity: 1; transform: translateY(0); filter: blur(0); }
-
-    h1 {
-      border-right: 2px solid rgba(255,255,255,.9);
-      white-space: nowrap;
-      overflow: hidden;
-      width: 0;
-      margin: 0 auto 6px;
-      animation: typing 2.4s steps(28, end) forwards, caret .8s step-end infinite;
-      max-width: 90%;
-    }
-    @keyframes typing { from { width: 0 } to { width: 22ch } }
-    @keyframes caret { 50% { border-color: transparent } }
-
-    footer {
-      background: var(--nav);
-      color: white;
-      text-align: center;
-      padding: 12px;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-    }
-
-    /* Reduced motion support */
-    @media (prefers-reduced-motion: reduce) {
-      * { animation: none !important; transition: none !important; }
-      section { opacity: 1; transform: none; filter: none; }
-      h1 { border-right: 0; width: auto; }
+    /* On phones, make footer non-fixed so it doesn’t cover content */
+    @media (min-width: 769px){
+      footer{position:fixed; bottom:0; left:0; right:0}
+      body{padding-bottom:56px} /* room for fixed footer */
     }
   </style>
 </head>
@@ -173,50 +122,31 @@
   </header>
 
   <nav>
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#projects">Projects</a>
-    <a href="#education">Education</a>
-    <a href="skills">Skills</a>
-    <a href="#contact">Contact</a>
-    <a href="madison.html">Madison</a>
-    <a href="bryce.html">Bryce</a>
-    <span class="nav-spacer"></span>
-    <div class="toggle-wrap">
-      <!-- Accessible toggle with inline SVG icons -->
-      <button id="themeToggle" class="theme-toggle" type="button" aria-pressed="false" title="Toggle dark mode">
-        <svg id="iconSun" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
-          <circle cx="12" cy="12" r="4"></circle>
-          <path d="M12 2v2m0 16v2M4.93 4.93l1.41 1.41m11.32 11.32l1.41 1.41M2 12h2m16 0h2M4.93 19.07l1.41-1.41m11.32-11.32l1.41-1.41"/>
-        </svg>
-        <svg id="iconMoon" style="display:none" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-          <path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/>
-        </svg>
-        <span id="toggleLabel">Dark</span>
-      </button>
-    </div>
+    <!-- hamburger on mobile -->
+    <button class="menu-toggle" id="menuToggle" aria-expanded="false" aria-controls="siteNav" title="Menu">
+      ☰
+    </button>
+
+    <ul class="nav-links" id="siteNav">
+      <!-- EDIT THESE LINKS PER PAGE -->
+      <!-- Example (Madison page): -->
+      <li><a href="https://bpcyberoptic.github.io/Bryceps.github.io/home.html">Home</a></li>
+      <li><a href="https://bpcyberoptic.github.io/Bryceps.github.io/madison.html/projects.html">Projects</a></li>
+      <li><a href="#education">Education</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#about">About</a></li>
+    </ul>
+
+    <span class="brand-spacer"></span>
+    <!-- keep your theme toggle if you’re using it -->
+    <button class="theme-toggle" id="themeToggle" aria-pressed="false" title="Toggle dark mode">🌓</button>
   </nav>
 
   <main class="content">
-    <section id="home">
-      <h2>Home</h2>
-      <p>This is a simple template you can use to create your personal site.</p>
-    </section>
-
-    <section id="about">
-      <h2>About</h2>
-      <p>Write something about yourself here. Maybe your background, hobbies, or interests.</p>
-    </section>
-
-    <section id="projects">
-      <h2>Projects</h2>
-      <p>Showcase your projects, portfolios, or work experience.</p>
-    </section>
-
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>Add your email, GitHub link, or social media handles here.</p>
-    </section>
+    <!-- your sections -->
+    <section id="about"><h2>About</h2><p>About content…</p></section>
+    <section id="education"><h2>Education</h2><p>Education content…</p></section>
+    <section id="contact"><h2>Contact</h2><p>Contact content…</p></section>
   </main>
 
   <footer>
@@ -224,54 +154,46 @@
   </footer>
 
   <script>
-    // ---- Scroll fade-in (unchanged) ----
-    (function () {
-      const sections = document.querySelectorAll("section");
-      if ("IntersectionObserver" in window) {
-        const obs = new IntersectionObserver((entries, o) => {
-          entries.forEach(e => {
-            if (e.isIntersecting) {
-              e.target.classList.add("visible");
-              o.unobserve(e.target);
-            }
-          });
-        }, { threshold: 0.12 });
-        sections.forEach(s => obs.observe(s));
-      } else {
-        sections.forEach(s => s.classList.add("visible"));
-      }
+    // Mobile menu
+    (function(){
+      const btn = document.getElementById('menuToggle');
+      const list = document.getElementById('siteNav');
+      btn.addEventListener('click', () => {
+        const open = list.classList.toggle('open');
+        btn.setAttribute('aria-expanded', String(open));
+        document.body.style.overflow = open ? 'hidden' : '';
+      });
+      // close menu when clicking a link (optional)
+      list.addEventListener('click', e => {
+        if(e.target.tagName === 'A'){ list.classList.remove('open'); btn.setAttribute('aria-expanded','false'); document.body.style.overflow=''; }
+      });
     })();
 
-    // ---- Theme init & toggle ----
-    (function () {
-      const root = document.documentElement;
-      const btn = document.getElementById("themeToggle");
-      const iconSun = document.getElementById("iconSun");
-      const iconMoon = document.getElementById("iconMoon");
-      const label = document.getElementById("toggleLabel");
+    // Fade-in on scroll
+    (function(){
+      const sections = document.querySelectorAll('section');
+      if('IntersectionObserver' in window){
+        const obs = new IntersectionObserver((entries,o)=>{
+          entries.forEach(e=>{ if(e.isIntersecting){ e.target.classList.add('visible'); o.unobserve(e.target);} });
+        },{threshold:.12});
+        sections.forEach(s=>obs.observe(s));
+      }else{ sections.forEach(s=>s.classList.add('visible')); }
+    })();
 
-      // Determine initial theme: saved > system > light
-      const saved = localStorage.getItem("theme");
-      const prefersDark = window.matchMedia && window.matchMedia("(prefers-color-scheme: dark)").matches;
-      const initial = saved || (prefersDark ? "dark" : "light");
-      setTheme(initial);
-
-      btn.addEventListener("click", () => {
-        const next = root.getAttribute("data-theme") === "dark" ? "light" : "dark";
-        setTheme(next);
-        localStorage.setItem("theme", next);
+    // Optional simple theme toggle (keeps your existing logic if you had one)
+    (function(){
+      const root=document.documentElement, btn=document.getElementById('themeToggle');
+      if(!btn) return;
+      const saved=localStorage.getItem('theme');
+      const prefersDark=window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+      setTheme(saved || (prefersDark?'dark':'light'));
+      btn.addEventListener('click',()=>{
+        setTheme(root.getAttribute('data-theme')==='dark'?'light':'dark');
       });
-
-      function setTheme(mode) {
-        root.setAttribute("data-theme", mode);
-        const dark = mode === "dark";
-        btn.setAttribute("aria-pressed", String(dark));
-        iconSun.style.display = dark ? "none" : "inline";
-        iconMoon.style.display = dark ? "inline" : "none";
-        label.textContent = dark ? "Light" : "Dark";
-        // Update theme-color meta for nicer mobile UI tint
-        const meta = document.querySelector('meta[name="theme-color"]');
-        if (meta) meta.setAttribute("content", dark ? "#0b1220" : "#4CAF50");
+      function setTheme(mode){
+        root.setAttribute('data-theme',mode);
+        localStorage.setItem('theme',mode);
+        btn.setAttribute('aria-pressed', String(mode==='dark'));
       }
     })();
   </script>
