--- a/madison.html
+++ b/madison.html
@@ -175,8 +175,8 @@
     /* Reduced motion support */
     @media (prefers-reduced-motion: reduce) {
       * { animation: none !important; transition: none !important; }
+      section { opacity: 1; transform: none; filter: none;}
       header h1 { border-right: 0; width: auto; }
-      section { opacity: 1; transform: none; }
     }
   </style>
 </head>
