--- a/madison.html
+++ b/madison.html
@@ -73,7 +73,7 @@
     /* ---------- HEADER ---------- */
     header {
       background: var(--brand);
-      color: #0e1013;
+      color: #3B393A;
       text-align: center;
       padding: clamp(16px, 4vw, 28px) 12px;
     }
