--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@
     header {
       background: var(--brand);
       color: #3B393A;
-      padding: 28px 12px;
+      padding: clamp(16px, 4vw, 28px) 12px;
       text-align: center;
     }
 
