--- a/madison.html
+++ b/madison.html
@@ -79,7 +79,7 @@
     }
     header h1 {
       margin: .2rem 0 .4rem;
-      font-weight: 800;
+      font-weight: 200;
       font-size: clamp(1.4rem, 4.8vw, 2.4rem);
       white-space: nowrap;
       overflow: hidden;
@@ -94,10 +94,10 @@
     /* On small screens, don’t clip the header */
     @media (max-width: 480px) {
       header h1 {
-        animation: none;
-        border-right: 0;
+        animation: typing 2.2s steps(28, end) forwards, caret .8s step-end infinite;
+        border-right: 2px solid rgba(0,0,0,.35);
         width: auto;
-        white-space: normal;
+        white-space: nowrap;
       }
     }
 
