--- a/madison.html
+++ b/madison.html
@@ -97,7 +97,7 @@
         animation: typing 2.2s steps(28, end) forwards, caret .8s step-end infinite;
         border-right: 2px solid rgba(0,0,0,.35);
         width: auto;
-        white-space: nowrap;
+        white-space: normal;
       }
     }
 
