--- a/madison.html
+++ b/madison.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8" />
@@ -78,15 +78,17 @@
       padding: clamp(16px, 4vw, 28px) 12px;
     }
     header h1 {
-      margin: .2rem 0 .4rem;
+      margin: .2rem auto .4rem;
       font-weight: 200;
-      font-size: clamp(1.4rem, 4.8vw, 2.4rem);
-      white-space: nowrap;
+      font-size: clamp(1.6rem, 4.8vw, 2.6rem);
+      text-align: center;
+      white-space: normal;        /* allow wrapping */
       overflow: hidden;
-      width: 0;
       border-right: 2px solid rgba(0,0,0,.35);
-      animation: typing 2.2s steps(28, end) forwards, caret .8s step-end infinite;
-    }
+      display: inline-block;      /* keeps caret close to text */
+      animation: typing 3s steps(30, end) forwards, caret .8s step-end infinite;
+}
+
     header p { margin: 0; opacity: .85; font-size: .95rem; }
     @keyframes typing { from { width: 0 } to { width: 22ch } }
     @keyframes caret { 50% { border-color: transparent } }
