--- a/main/home.html
+++ b/main/home.html
@@ -189,12 +189,9 @@
   <nav>
     <a href="#home">Home</a>
     <a href="#about">About</a>
-    <a href="#projects">Projects</a>
-    <a href="#education">Education</a>
-    <a href="skills">Skills</a>
     <a href="#contact">Contact</a>
-    <a href="madison.html">Madison</a>
-    <a href="bryce.html">Bryce</a>
+    <a href="main/madison/madison.html">Madison</a>
+    <a href="main/bryce/bryce.html">Bryce</a>
     <span class="nav-spacer"></span>
     <div class="toggle-wrap">
       <!-- Accessible toggle with inline SVG icons -->
@@ -220,11 +217,6 @@
     <section id="about">
       <h2>About</h2>
       <p>Write something about yourself here. Maybe your background, hobbies, or interests.</p>
-    </section>
-
-    <section id="projects">
-      <h2>Projects</h2>
-      <p>Showcase your projects, portfolios, or work experience.</p>
     </section>
 
     <section id="contact">
