Updating the link because I was stupid.

--- a/main/home.html
+++ b/main/home.html
@@ -190,8 +190,8 @@
     <a href="#home">Home</a>
     <a href="#about">About</a>
     <a href="#contact">Contact</a>
-    <a href="main/madison/madison.html">Madison</a>
-    <a href="main/bryce/bryce.html">Bryce</a>
+    <a href="madison/madison.html">Madison</a>
+    <a href="bryce/bryce.html">Bryce</a>
     <span class="nav-spacer"></span>
     <div class="toggle-wrap">
       <!-- Accessible toggle with inline SVG icons -->
