--- a/main/madison/madison.html
+++ b/main/madison/madison.html
@@ -192,7 +192,7 @@
     <ul class="nav-links" id="siteNav">
       <!-- EXACT LINKS YOU REQUESTED -->
       <li><a href="https://bpcyberoptic.github.io/Bryceps.github.io/home.html">Home</a></li>
-      <li><a href="https://bpcyberoptic.github.io/Bryceps.github.io/madison.html/projects.html">Projects</a></li>
+      <li><a href="https://bpcyberoptic.github.io/Bryceps.github.io/madison/madison-projects.html">Projects</a></li>
       <li><a href="#education">Education</a></li>
       <li><a href="#contact">Contact</a></li>
       <li><a href="#about">About</a></li>
