Updating more links because I'm forgetting the folders.

--- a/main/madison/madison.html
+++ b/main/madison/madison.html
@@ -191,8 +191,8 @@
   <nav>
     <ul class="nav-links" id="siteNav">
       <!-- EXACT LINKS YOU REQUESTED -->
-      <li><a href="https://bpcyberoptic.github.io/Bryceps.github.io/home.html">Home</a></li>
-      <li><a href="https://bpcyberoptic.github.io/Bryceps.github.io/madison/madison-projects.html">Projects</a></li>
+      <li><a href="https://bpcyberoptic.github.io/Bryceps.github.io/main/home.html">Home</a></li>
+      <li><a href="https://bpcyberoptic.github.io/Bryceps.github.io/main/madison/madison-projects.html">Projects</a></li>
       <li><a href="#education">Education</a></li>
       <li><a href="#contact">Contact</a></li>
       <li><a href="#about">About</a></li>
