--- a/main/madison/madison-projects.html
+++ b/main/madison/madison-projects.html
@@ -173,7 +173,7 @@
                 Full rebuild with a focus on responsiveness, accessibility, and a clean minimalist aesthetic to highlight achievements.
               </p>
               <figure class="banner-image">
-                <img src="/main/madison/images/portfolio-preview.jpg" alt="Portfolio screenshot">
+                <img src="https://bpcyberoptic.github.io/Bryceps.github.io/main/madison/images/portfolio-preview.jpg" alt="Portfolio screenshot">
                 <figcaption>Initial responsive preview.</figcaption>
               </figure>
               <ul>
@@ -200,7 +200,7 @@
                 A storyboard-like experience with hover micro-interactions and inline expanding sections to tell the story behind each milestone.
               </p>
               <figure class="banner-image">
-                <img src="/main/madison/images/storyboard-demo.jpg" alt="Storyboard demo">
+                <img src="https://bpcyberoptic.github.io/Bryceps.github.io/main/madison/images/storyboard-demo.jpg" alt="Storyboard demo">
                 <figcaption>Card interactions and narrative flow.</figcaption>
               </figure>
               <ul>
@@ -227,7 +227,7 @@
                 A redesign focused on typography, mobile-first layout, and semantic HTML for a better reading experience.
               </p>
               <figure class="banner-image">
-                <img src="/main/madison/images/blog-redesign.jpg" alt="Community blog redesign preview">
+                <img src="https://bpcyberoptic.github.io/Bryceps.github.io/main/madison/images/blog-redesign.jpg" alt="Community blog redesign preview">
                 <figcaption>Clean, readable layouts across breakpoints.</figcaption>
               </figure>
               <p>
