--- a/main/madison/madison-projects.html
+++ b/main/madison/madison-projects.html
@@ -150,8 +150,17 @@
       <li><a href="/main/madison/madison.html#about">About</a></li>
     </ul>
     <span class="nav-spacer"></span>
-    <button id="themeToggle" class="theme-toggle" type="button" aria-pressed="false" title="Toggle dark mode">🌙</button>
-  </nav>
+      <button id="themeToggle" class="theme-toggle" type="button" aria-pressed="false" title="Toggle dark mode">
+        <svg id="iconSun" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+          <circle cx="12" cy="12" r="4"></circle>
+          <path d="M12 2v2m0 16v2M4.93 4.93l1.41 1.41m11.32 11.32l1.41 1.41M2 12h2m16 0h2M4.93 19.07l1.41-1.41m11.32-11.32l1.41-1.41"/>
+        </svg>
+        <svg id="iconMoon" style="display:none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+          <path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/>
+        </svg>
+    <span id="toggleLabel">Dark</span>
+    </button>
+   </nav>
 
   <main>
     <section class="project-cards">
