Making the final touches on the improvements to continuity.

--- a/main/bryce/bryce.html
+++ b/main/bryce/bryce.html
@@ -6,6 +6,7 @@
   <title>Bryce | My GitHub Page</title>
   <meta name="color-scheme" content="light dark">
   <meta name="theme-color" content="#4CAF50" />
+  <link rel="stylesheet" href="https://bpcyberoptic.github.io/Bryceps.github.io/main/assets/css/site.css">
 
   <style>
     /* ---------- THEME TOKENS ---------- */
@@ -117,7 +118,7 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to Bryce’s Page</h1>
+    <h1 class="fade-in-hero">Welcome to Bryce’s Page</h1>
     <p>Hosted with GitHub Pages</p>
   </header>
 
@@ -180,5 +181,6 @@
       }
     })();
   </script>
+  <script type="module" src="https://bpcyberoptic.github.io/Bryceps.github.io/main/assets/js/site.js"></script>
 </body>
 </html>
