--- a/main/madison/madison-projects.html
+++ b/main/madison/madison-projects.html
@@ -7,6 +7,8 @@
 
   <meta name="color-scheme" content="light dark">
   <meta name="theme-color" content="#4CAF50" />
+  <script type="module" src="https://bpcyberoptic.github.io/Bryceps.github.io/main/assets/js/site.js"></script>
+
 
   <style>
     /* ---------- THEME TOKENS ---------- */
@@ -136,7 +138,7 @@
 </head>
 <body>
   <header>
-    <h1>Madison’s Projects</h1>
+    <h1 class="fade-in-hero">Madison’s Projects</h1>
     <p>Interactive Storyboard of Accomplishments</p>
   </header>
 
@@ -385,5 +387,6 @@
       });
     })();
   </script>
+  <script type="module" src="https://bpcyberoptic.github.io/Bryceps.github.io/main/assets/js/site.js"></script>
 </body>
 </html>
