--- a/main/home.html
+++ b/main/home.html
@@ -8,6 +8,8 @@
   <!-- Let browsers know we support light & dark -->
   <meta name="color-scheme" content="light dark">
   <meta name="theme-color" content="#4CAF50" />
+  <link rel="stylesheet" href="https://bpcyberoptic.github.io/Bryceps.github.io/main/assets/css/site.css">
+
 
   <style>
     /* ---------- THEME TOKENS ---------- */
@@ -136,32 +138,6 @@
     section:hover { transform: translateY(-4px); box-shadow: var(--shadow-lg); }
     section.visible { opacity: 1; transform: translateY(0); filter: blur(0); }
 
-    /* ---------- FIXED: H1 typing & centering ---------- */
-    h1 {
-      margin: 0.2rem auto 6px;        /* center */
-      font-weight: 700;
-      font-size: clamp(1.6rem, 5vw, 2.6rem);
-      text-align: center;
-      display: inline-block;          /* keep caret tight to text */
-      white-space: nowrap;            /* one line on larger screens */
-      overflow: hidden;
-      border-right: 2px solid rgba(0,0,0,.35);
-      animation: typing 3s steps(30, end) forwards, caret .8s step-end infinite;
-    }
-    /* reveal to full width so long titles don’t clip */
-    @keyframes typing { from { width: 0 } to { width: 100% } }
-    @keyframes caret { 50% { border-color: transparent } }
-
-    /* Phones: disable typing & allow wrapping so it's always fully visible */
-    @media (max-width: 600px) {
-      h1 {
-        animation: none;
-        border-right: 0;
-        white-space: normal;   /* can wrap to 2 lines */
-        width: auto;
-      }
-    }
-
     footer {
       background: var(--nav);
       color: white;
@@ -182,7 +158,7 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to My Website</h1>
+    <h1 class="fade-in-hero">Welcome to My Website</h1>
     <p>Hosted with GitHub Pages</p>
   </header>
 
@@ -279,5 +255,6 @@
       }
     })();
   </script>
+  <script type="module" src="https://bpcyberoptic.github.io/Bryceps.github.io/main/assets/js/site.js"></script>
 </body>
 </html>
