--- a/main/madison/madison.html
+++ b/main/madison/madison.html
@@ -7,6 +7,8 @@
 
   <meta name="color-scheme" content="light dark" />
   <meta name="theme-color" content="#4CAF50" />
+  <link rel="stylesheet" href="https://bpcyberoptic.github.io/Bryceps.github.io/main/assets/css/site.css">
+
 
   <style>
     /* ---------- THEME TOKENS ---------- */
@@ -77,32 +79,7 @@
       text-align: center;
       padding: clamp(16px, 4vw, 28px) 12px;
     }
-    header h1 {
-      margin: .2rem auto .4rem;
-      font-weight: 200;
-      font-size: clamp(1.6rem, 4.8vw, 2.6rem);
-      text-align: center;
-      white-space: normal;        /* allow wrapping */
-      overflow: hidden;
-      border-right: 2px solid rgba(0,0,0,.35);
-      display: inline-block;      /* keeps caret close to text */
-      animation: typing 3s steps(30, end) forwards, caret .8s step-end infinite;
-}
-
-    header p { margin: 0; opacity: .85; font-size: .95rem; }
-    @keyframes typing { from { width: 0 } to { width: 100% } }
-    @keyframes caret { 50% { border-color: transparent } }
-
-    /* On small screens, don’t clip the header */
-    @media (max-width: 600px) {
-      header h1 {
-        animation: typing 2.2s steps(28, end) forwards, caret .8s step-end infinite;
-        border-right: 2px solid rgba(0,0,0,.35);
-        width: auto;
-        white-space: normal;
-      }
-    }
-
+   
     /* ---------- NAV ---------- */
     nav {
       background: var(--nav);
@@ -184,7 +161,7 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to Madison’s Page</h1>
+    <h1 class="fade-in-hero">Welcome to Madison’s Page</h1>
     <p>Hosted with GitHub Pages</p>
   </header>
 
@@ -284,5 +261,6 @@
       }
     })();
   </script>
+  <script type="module" src="https://bpcyberoptic.github.io/Bryceps.github.io/main/assets/js/site.js"></script>
 </body>
 </html>
